[package]
name = "tmtc-linux-ground"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.45.0"
embedded-io-adapters = { version = "0.6.1", features = [ "tokio-1" ] }
embedded-io-async = { version = "0.6.1", features = [ "std" ] }
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = "0.11.2"
simple_config = { git = "https://github.com/Eleocraft/simple_config_rs.git" }
south-common = { version = "0.2.0", git = "ssh://git@github.com/S2outh/south-common.git" }
tokio = { version = "1.48.0", features = [ "rt-multi-thread", "macros" ] }
tokio-serial = "5.4.5"

#openlst-driver = { git = "ssh://git@github.com/S2outh/RocketLST-software.git", subdir = "openlst-driver", features = ["std"] }
openlst-driver = { path = "/home/eliseoc/WueSpace/South/Air/rocketlst/openlst-driver", features = ["std"] }
