[package]
name = "tmtc-linux-ground"
version = "1.0.0"
edition = "2024"

[dependencies]
async-nats = "0.45.0"
embedded-io-adapters = { version = "0.7.0", features = [ "tokio-1" ] }
embedded-io-async = { version = "0.7.0", features = [ "std" ] }
tokio = { version = "1.49.0", features = [ "rt-multi-thread", "macros" ] }
tokio-serial = "5.4.5"

simple_config = { git = "https://github.com/Eleocraft/simple_config_rs.git" }

south-common = { version = "2.0.0", git = "ssh://git@github.com/S2outh/south-common.git", features = ["serde"] }
#south-common = { version = "0.2.0", path = "/home/eliseoc/WueSpace/South/south-common", features = ["serde"] }

openlst-driver = { git = "ssh://git@github.com/S2outh/RocketLST-software.git", features = ["std"] }
#openlst-driver = { path = "/home/eliseoc/WueSpace/South/Air/rocketlst/openlst-driver", features = ["std"] }

serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_cbor = { version = "0.11.2" }
