[package]
name = "tmtc-linux-ground"
version = "1.0.0"
edition = "2024"

[dependencies]
async-nats = "0.45.0"
embedded-io-adapters = { version = "0.7.0", features = [ "tokio-1" ] }
embedded-io-async = { version = "0.7.0", features = [ "std" ] }
tokio = { version = "1.49.0", features = [ "rt-multi-thread", "macros" ] }
tokio-serial = "5.4.5"

simple_config = { git = "https://github.com/Eleocraft/simple_config_rs.git" }

south-common = { git = "https://github.com/S2outh/south-common.git", features = ["ground"] }
#south-common = { version = "0.2.0", path = "/home/eliseoc/WueSpace/South/south-common", features = ["serde"] }

openlst-driver = { git = "https://github.com/S2outh/RocketLST-software.git" }
#openlst-driver = { path = "/home/eliseoc/WueSpace/South/Air/rocketlst/openlst-driver" }

serde = { version = "1.0.228", default-features = false, features = ["alloc"] }
minicbor-serde = { version = "0.6.2", features = ["full"] }
paste = "1.0.15"
